--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -132,4 +132,13 @@
         <servlet-name>getCurrentCars</servlet-name>
         <url-pattern>/drivers/cars</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>authFilter</filter-name>
+        <filter-class>taxi.controller.filter.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>authFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
